--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Digital.edu</title>
+  <title>Intrale</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://www.mercadopago.com/v2/security.js" view="checkout"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,6 +17,7 @@
     ga('send', 'pageview');
 
   </script>
+  
 </head>
 <body>
     <app-root>
